--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
       <span>Y</span>
     </div>
     <div class="row"> 
-      <span>K</span>
-      <span>I</span>
-      <span>N</span>
       <span>A</span>
       <span>N</span>
+      <span>Y</span>
+      <span>A</span>
+      <span>A</span>
       <!-- <span>t</span>
       <span>h</span>
       <span>e</span>
